--- a/index.html
+++ b/index.html
@@ -7,31 +7,44 @@
     </head>
     <body>
         <nav class="navbar">
-            <h1 class="logo">James' Ways</h1>
+            <h1 class="logo">
+                <a href="index.html">James' Ways</a>
+            </h1>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
         <main>
             <h1 class="page-title">Hello world!</h1>
             <div class="about">
-                <div class="about-image"></div>
-                <div class="about-text">
-                    <p>Hello, I am <strong>James Lamkin</strong>! I'm a 4th year
-                        <em>Computer Science</em> major
-                        at <strong>Cal Poly SLO</strong>,
-                        concentrating in Machine Learning and Artifical
-                        Intelligence,
-                        with a minor in <em>Data Science</em>.
-                        <br>
-                        I spend my free time running <strong>Cal
-                            Poly Roundnet</strong> <em>(Spikeball)</em> as the
-                        club
-                        president,
-                        playing music,
-                        and various types of games!
-                    </p>
+                <div class="about-image">
+                    <img src="images/James_pic.jpg" alt="Picture of James Lamkin"
+                        </div>
+                    <div class="about-text">
+                        <p>Hello, I am <strong>James Lamkin</strong>! I'm a 4th
+                            year
+                            <em>Computer Science</em> major
+                            at <strong>Cal Poly SLO</strong>,
+                            concentrating in Machine Learning and Artifical
+                            Intelligence,
+                            with a minor in <em>Data Science</em>.
+                            <br>
+                            I spend my free time running <strong>Cal
+                                Poly Roundnet</strong> <em>(Spikeball)</em> as
+                            the
+                            club
+                            president,
+                            playing music,
+                            and various types of games!
+                        </p>
+                    </div>
                 </div>
-            </div>
-        </main>
-        <footer class="footer">© 2023 James&#39 Ways of the Web | All Rights
-            Reserved</footer>
-    </body>
-</html>
+            </main>
+            <footer class="footer">© 2023 James&#39 Ways of the Web | All Rights
+                Reserved</footer>
+        </body>
+    </html>
