feat: added contact form to contact.html

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,16 @@
             <h1 class="page-title">
                 James' Contact
             </h1>
+            <form id="contact-form">
+                <label for="name">Name: </label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email: </label>
+                <input type="text" id="email" required>
+                <label for="message">Message: </label>
+                <textarea id="message" name="message" required>
+                </textarea>
+                <input type="submit">
+            </form>
         </main>
         <footer class="footer">© 2023 James&#39 Ways of the Web | All Rights
             Reserved</footer>
