--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,18 @@
             <h1 class="page-title">
                 James' Portfolio
             </h1>
-            <div class="project"></div>
+            <div class="project">
+                <a href="index.html"><img src="images/James_pic.jpg"
+                        alt="Picture of James Lamkin" width="240"
+                        height="200"></a>
+                <div class="project-details">
+                    <p class="project-name"><strong>James' Ways of the
+                            Web</strong></p>
+                    <p class="project-description">This is James Lamkin's person
+                        website, which displays information about his life!</p>
+                    <a href="index.html">LEARN MORE</a>
+                </div>
+            </div>
         </main>
         <footer class="footer">© 2023 James&#39 Ways of the Web | All Rights
             Reserved</footer>
