--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
             <h1 class="logo">James' Ways</h1>
-            <ul>
+            <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
