--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1 class="logo">
                 <a href="index.html">James' Ways</a>
             </h1>
-            <ul>
+            <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -23,7 +23,8 @@
             <h1 class="page-title">Hello world!</h1>
             <div class="about">
                 <div class="about-image">
-                    <img src="images/James_pic.jpg" alt="Picture of James Lamkin"
+                    <img src="images/James_pic.jpg"
+                        alt="Picture of James Lamkin"
                         </div>
                     <div class="about-text">
                         <p>Hello, I am <strong>James Lamkin</strong>! I'm a 4th
