fix: updated personal wesbite project image to have correct class name: project-image

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
             </h1>
             <div class="project">
                 <a href="index.html"><img src="images/James_pic.jpg"
-                        alt="Picture of James Lamkin" width="240"
-                        height="200"></a>
+                        alt="Picture of James Lamkin" class="project-image">
+                </a>
                 <div class="project-details">
                     <p class="project-name"><strong>James' Ways of the
                             Web</strong></p>
