--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>James' Ways of the Web</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
+        <link rel="icon" href="images/favicon.ico">
     </head>
     <body>
         <nav class="navbar">
@@ -24,29 +27,29 @@
             <div class="about">
                 <div class="about-image">
                     <img src="images/James_pic.jpg"
-                        alt="Picture of James Lamkin"
-                        </div>
-                    <div class="about-text">
-                        <p>Hello, I am <strong>James Lamkin</strong>! I'm a 4th
-                            year
-                            <em>Computer Science</em> major
-                            at <strong>Cal Poly SLO</strong>,
-                            concentrating in Machine Learning and Artifical
-                            Intelligence,
-                            with a minor in <em>Data Science</em>.
-                            <br>
-                            I spend my free time running <strong>Cal
-                                Poly Roundnet</strong> <em>(Spikeball)</em> as
-                            the
-                            club
-                            president,
-                            playing music,
-                            and various types of games!
-                        </p>
-                    </div>
+                        alt="Picture of James Lamkin">
                 </div>
-            </main>
-            <footer class="footer">© 2023 James&#39 Ways of the Web | All Rights
-                Reserved</footer>
-        </body>
-    </html>
+                <div class="about-text">
+                    <p>Hello, I am <strong>James Lamkin</strong>! I'm a 4th
+                        year
+                        <em>Computer Science</em> major
+                        at <strong>Cal Poly SLO</strong>,
+                        concentrating in Machine Learning and Artifical
+                        Intelligence,
+                        with a minor in <em>Data Science</em>.
+                        <br>
+                        I spend my free time running <strong>Cal
+                            Poly Roundnet</strong> <em>(Spikeball)</em> as
+                        the
+                        club
+                        president,
+                        playing music,
+                        and various types of games!
+                    </p>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">© 2023 James&#39 Ways of the Web | All Rights
+            Reserved</footer>
+    </body>
+</html>
