fix: removed border from project

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>James' Portfolio</title>
+        <link rel="icon" href="images/favicon.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -22,7 +29,8 @@
                 James' Portfolio
             </h1>
             <div class="project">
-                <a href="index.html"><img src="images/James_pic.jpg"
+                <a href="index.html" id="personal-website-image"><img
+                        src="images/favicon-large.png"
                         alt="Picture of James Lamkin" class="project-image">
                 </a>
                 <div class="project-details">
