last minute add verything

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>James' Ways of the Web</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
         <link rel="icon" href="images/favicon.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
+
     </head>
     <body>
         <nav class="navbar">
@@ -23,7 +27,7 @@
             </ul>
         </nav>
         <main>
-            <h1 class="page-title">Hello world!</h1>
+            <h1 class="page-title">Howdy!</h1>
             <div class="about">
                 <div class="about-image">
                     <img src="images/James_pic.jpg"
@@ -36,8 +40,11 @@
                         at <strong>Cal Poly SLO</strong>,
                         concentrating in Machine Learning and Artifical
                         Intelligence,
-                        with a minor in <em>Data Science</em>.
-                        <br>
+                        with a minor in <em>Data Science</em>. I'm from
+                        <strong>Boise, Idaho</strong> and have been living in
+                        <strong>San Luis Obispo, California</strong> for the
+                        past few years attending college.
+                        <br><br>
                         I spend my free time running <strong>Cal
                             Poly Roundnet</strong> <em>(Spikeball)</em> as
                         the
@@ -46,7 +53,15 @@
                         playing music,
                         and various types of games!
                     </p>
+                    <div id="about-links">
+                        <a class="about-link"
+                            href="https://www.linkedin.com/in/james-lamkin/">LinkedIn</a>
+                        |
+                        <a class="about-link"
+                            href="https://github.com/lamkin1">Github</a>
+                    </div>
                 </div>
+
             </div>
         </main>
         <footer class="footer">© 2023 James&#39 Ways of the Web | All Rights
