--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>James' Blog</title>
+        <link rel="icon" href="images/favicon.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -21,6 +28,11 @@
             <h1 class="page-title">
                 James' Blog
             </h1>
+            <div class="blog-body">
+                <p>
+                    More to come later...
+                </p>
+            </div>
         </main>
         <footer class="footer">© 2023 James&#39 Ways of the Web | All Rights
             Reserved</footer>
