--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>James' Resume</title>
+        <link rel="icon" href="images/favicon.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -19,7 +26,8 @@
         </nav>
         <main>
             <h1 class="page-title">James' Resume</h1>
-            <a href="resume.pdf" download>Download Resume</a>
+            <a id="download-resume" href="resume.pdf" download>Download
+                Resume</a>
             <div class="resume">
                 <section class="section">
                     <h2 class="section-title">
