--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,10 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <nav class="navbar">
-            <h1 class="logo">James' Ways</h1>
+            <h1 class="logo"><a href="index.html">James' Ways</a></h1>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="blog.html">Blog</a></li>
